# nerfbaselines

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conftest.py  cu-config.yml  measure_fps.py  pyproject.toml  results  setup.py
.github/workflows/: build-docker-images.yml  deploy-web.yml  release.yml  run-tests-slow.yml
assets/: Dockerfile
docs/: .gitignore  adding-new-datasets.md  adding-new-methods.md  backends.md  cli.rst  conf.py  custom-dataset-loader.md  custom-web.md  datasets.md  exporting-demos.md  exporting-meshes.md  exporting-results-tables.ipynb  index.md  installation.md  methods.md  python-tutorial.ipynb  quickstart.md  using-custom-data.md  viewer-notebook.ipynb  viewer.md
docs/_ext/: sphinx_nerfbaselines.py
docs/_static/: styles.css
docs/_templates/: brand.html  module.rst.jinja  package.rst.jinja  toc.rst.jinja  versions.html
docs/examples/01-simple-method/: my_method.py  my_method_spec.py
nerfbaselines/: __init__.py  __main__.py  _constants.py  _export_3dgs.py  _export_demo.py  _fix_checkpoint.py  _generate_web.py  _method_utils.py  _metrics_lpips.py  _registry.py  _test_method.py  _types.py  _version.py  _xnp_utils.py  cameras.py  cli.py  communication.py  distortion.py  evaluate.py  evaluation.py  export_demo.py  io.py  logging.py  math_utils.py  metrics.json  metrics.py  palettes.json  pose_utils.py  registry.py  render.py  render_trajectory.py  results.py  tensorboard.py  train.py  training.py  types.py  upload_results.py  utils.py  viewer.py
nerfbaselines/backends/: Dockerfile  __init__.py  _apptainer.py  _common.py  _conda.py  _docker.py  _interface.py  _rpc.py  _rpc2.py  _transport_protocol.py  apptainer.py  conda.py  docker.py  protocol_shm_pickle.py  protocol_tcp_pickle.py
nerfbaselines/cli/: __init__.py  _build_docker_image.py  _common.py  _download_dataset.py  _evaluate.py  _export_demo.py  _export_mesh.py  _fix_checkpoint.py  _fix_output_artifact.py  _generate_dataset_results.py  _install_method.py  _measure_fps.py  _render.py  _shell.py  _test_method.py  _train.py  _viewer.py  _web.py  export_demo.py  fix_checkpoint.py  fix_output_artifact.py  generate_dataset_results.py  generate_web.py  install_method.py  render.py  test_method.py
nerfbaselines/datasets/: __init__.py  _colmap_utils.py  _common.py  blender.json  blender.py  blender_spec.py  bundler.py  bundler_spec.py  colmap.py  colmap_spec.py  hierarchical_3dgs.py  hierarchical_3dgs_spec.py  llff.py  llff_spec.py  mipnerf360.json  mipnerf360.py  mipnerf360_sparse.py  mipnerf360_sparse_spec.py  mipnerf360_spec.py  nerfonthego.py  nerfstudio.json  nerfstudio.py  nerfstudio_spec.py  phototourism.py  phototourism_spec.py  scannetpp.py  seathru_nerf.py  seathru_nerf_spec.py  tanksandtemples.py  tanksandtemples_spec.py  zipnerf.py  zipnerf_spec.py
nerfbaselines/methods/: 2d_gaussian_splatting.py  2d_gaussian_splatting_spec.py  3dgs_mcmc.py  3dgs_mcmc_patch.py  3dgs_mcmc_spec.py  _2d_gaussian_splatting_patch.py  _3dgs_mcmc_patch.py  _common.py  _gaussian_splatting_demo.py  _gaussian_splatting_demo.py.html  _mesh_demo.py  _mesh_demo.py.html  _patching.py  _taming_3dgs_patch.py  camp_zipnerf.py  camp_zipnerf_spec.py  citygaussian_spec.py  colmap.py  colmap_spec.py  dropgaussian.py  dropgaussian_patch.py  dropgaussian_spec.py  f2nerf.cpp  f2nerf_spec.py  gaussian_opacity_fields.py  gaussian_opacity_fields_spec.py  gaussian_splatting.py  gaussian_splatting_2d.py  gaussian_splatting_2d_patch.py  gaussian_splatting_2d_spec.py  gaussian_splatting_demo.html  gaussian_splatting_spec.py  gaussian_splatting_wild.py  gaussian_splatting_wild_spec.py  gsplat.py  gsplat_spec.py  hierarchical_3dgs.py  hierarchical_3dgs_patch.py  hierarchical_3dgs_spec.py  instant_ngp.py  (+53 more)
nerfbaselines/methods/_impl/: camp_zipnerf.py  gaussian_splatting.py  instant_ngp.py  mip_splatting.py  multinerf.py  nerf.py  nerfstudio.py  tensorf.py  tetranerf.py  zipnerf.py
nerfbaselines/methods/f2nerf/: CMakeLists.txt  extension.cpp
nerfbaselines/methods/trips/: CMakeLists.txt  trips.cu
nerfbaselines/viewer/: __init__.py  _flask.py  _httpserver.py  _proxy.py  _server.py  _static.py  _viewer.py  _viewer_viewmodel.py  _viser.py  _viser_viewmodel.py  _websocket.py  nerfstudio.py  viser.py  viser_render_panel.py
nerfbaselines/viewer/static/: 3dgs.js  controls.js  gaussian_splatting.js  index.html  interpolation.js  mesh.js  styles.css  threejs_utils.js  viewer.js
nerfbaselines/viewer/templates/: index.html
nerfbaselines/web/: __init__.py  __main__.py  _multidemo.py  _web.py
nerfbaselines/web/public/: scripts.js  styles.css
nerfbaselines/web/templates/: [dataset].html  _layout.html  (+3 more)
scripts/: create_seathru_nerf_dataparser_transform.py  evaluate_oracle_nerfw.py  export-all-datasets.py  export-all-demos.sh  export-all-meshes.sh  export.sh  fix_results_metadata.py  has_method_changed.py  make_ksplat.sh  test_all.sh  test_all_methods.sh  trajectory-change-coordinates.py  update_readme.py  upgrade_outputs.py
tests/: .gitignore  conftest.py  test_backends.py  test_cameras.py  test_cli.py  test_communication.py  test_datasets.py  test_docs.py  test_evaluate.py  test_io.py  test_methods.py  test_metrics.py  test_patching.py  test_registry.py  test_render_frames.py  test_results.py  test_rpc.py  test_rpc_benchmark.py  test_rpc_protocol.py  test_train_render.py  test_types.py  test_utils.py  test_viewer.py
tests/methods/: _test_ingp.py  _test_multinerf.py  _test_nerfstudio.py  _test_tetranerf.py  test_3dgs_mcmc.py  test_dropgaussian.py  test_gaussian_splatting.py  test_hierarchical_3dgs.py  test_ingp.py  test_minisplatting2.py  test_mip_splatting.py  test_multinerf.py  test_nerfstudio.py  test_octree_gs.py  test_pgsr.py  test_sparsegs.py  test_student_splatting_scooping.py  test_taming_3dgs.py  test_tetranerf.py  test_threedgrut.py
web/: next.config.js  package-lock.json  package.json
web/app/: emotion.tsx  globals.css  layout.tsx  page.tsx
web/data/: mipnerf360.json
web/public/: demo-gs.html  enable-threads.js  gaussian-splats-3d.module.min.js  video.html
web/utils/: api.ts
(+181 files in other folders)
